<resources>
    <string name="app_name">GADS Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="email_address"><b>Email Address</b></string>
    <string name="first_name"><b>First Name</b></string>
    <string name="last_name"><b>Last Name</b></string>
    <string name="project_on_github_link"><b>Project on GITHUB (link)</b></string>
</resources>